--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -3,37 +3,44 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="lib/js/jquery.min.js"></script>
 </head>
 <body>
     <table id="employee">
-        <tr>
-            <th>Stuff Number</th>
-            <th>Name</th>
-            <th>Position</th>
-            <th>Email Address</th>
-            <th>Phone Number</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Stuff Number</th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Email Address</th>
+                <th>Phone Number</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
     </table>
 
- <script>
-$(document).ready(function(){
-     var url = "https://localhost:44382/api/employees";
- $.getJSON(url,function(data){
-   var employee_data = '';
-   $.each(data,function(key,value){
-     employee_data += '<tr>';
-	 employee_data += '<td>'+value.stuffno+'</td>';
-	 employee_data += '<td>'+value.name+'</td>';
-	 employee_data += '<td>'+value.email+'</td>';
-	 employee_data += '<td>'+value.phoneno+'</td>';
-	 employee_data += '</tr>';
-   });
-   $('#employee').append(employee_data);
- });
-});
+    <script>
+        var url = ["test","test","test","test","test"]
+        $.getJSON(url, function (data) {
+            var items = [];
 
-</script>
+            $.each(data, function (key,val ) {
+
+                items.push("<tr>");
+                items.push("<td id ='' " + key + "''>" + val.stuffnumber + "<td>");
+                items.push("<td id ='' " + key + "''>" + val.name + "<td>");
+                items.push("<td id ='' " + key + "''>" + val.position + "<td>");
+                items.push("<td id ='' " + key + "''>" + val.email + "<td>");
+                items.push("<td id ='' "+key+"''>"+val.phonenumber+"<td>");
+                items.push("</tr>");
+            });
+            $('<tbody/>', { html.items.join("") }).appendTo("table");
+        });
+
+    </script>
 
 
 </body>
 </html>
+
+
